Don't try to use libhyphen-native on Windows. Patch copied from pipeline-mod-celia.

--- a/pom.xml
+++ b/pom.xml
@@ -54,6 +54,12 @@
       <scope>runtime</scope>
     </dependency>
     <dependency>
+      <groupId>org.daisy.pipeline.modules.braille</groupId>
+      <artifactId>libhyphen-native</artifactId>
+      <classifier>linux</classifier>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
       <groupId>org.daisy.maven</groupId>
       <artifactId>xproc-engine-daisy-pipeline</artifactId>
       <scope>test</scope>
