--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
   </parent>
 
   <artifactId>mod-dedicon</artifactId>
-  <version>1.1.0-SNAPSHOT</version>
+  <version>1.1.0</version>
   <packaging>bundle</packaging>
 
   <name>DP2 Braille Modules :: mod-dedicon</name>
@@ -176,4 +176,8 @@
       </plugin>
     </plugins>
   </build>
+
+  <scm>
+    <tag>v1.1.0</tag>
+  </scm>
 </project>
