Update to latest braille modules

--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
   <parent>
     <groupId>org.daisy.pipeline.modules.braille</groupId>
     <artifactId>braille-modules-parent</artifactId>
-    <version>1.9.7</version>
+    <version>1.9.8-SNAPSHOT</version>
     <relativePath />
   </parent>
 
@@ -124,7 +124,7 @@
           <instructions>
             <Service-Component>OSGI-INF/tables.xml</Service-Component>
             <_dsannotations>
-              nl.dedicon.pipeline.braille.impl.DediconCSSBlockTransform$Provider
+              nl.dedicon.pipeline.braille.impl.DediconTranslator$Provider
             </_dsannotations>
           </instructions>
         </configuration>
