--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
   </parent>
 
   <artifactId>mod-dedicon</artifactId>
-  <version>1.2.0</version>
+  <version>1.2.1-SNAPSHOT</version>
   <packaging>bundle</packaging>
 
   <name>DP2 Braille Modules :: mod-dedicon</name>
@@ -176,8 +176,4 @@
       </plugin>
     </plugins>
   </build>
-
-  <scm>
-    <tag>v1.2.0</tag>
-  </scm>
 </project>
