--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,10 @@
   <parent>
     <groupId>org.daisy.pipeline.modules.braille</groupId>
     <artifactId>braille-modules-parent</artifactId>
-    <version>1.9.8</version>
+    <!--
+        depends on master
+    -->
+    <version>1.9.10-SNAPSHOT</version>
     <relativePath />
   </parent>
 
@@ -73,6 +76,11 @@
     <dependency>
       <groupId>org.daisy.pipeline.modules.braille</groupId>
       <artifactId>pef-utils</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.daisy.pipeline.modules.braille</groupId>
+      <artifactId>dtbook-to-pef</artifactId>
       <scope>test</scope>
     </dependency>
     <dependency>
