Replace OSGI-INF/tables.xml with annotated Java class
because combining service components using "Service-Component" and
"_dsannotations" instructions in POM and included BND file apparently
doesn't work.

--- a/pom.xml
+++ b/pom.xml
@@ -129,9 +129,9 @@
         <artifactId>maven-bundle-plugin</artifactId>
         <configuration>
           <instructions>
-            <Service-Component>OSGI-INF/tables.xml</Service-Component>
             <_dsannotations>
-              nl.dedicon.pipeline.braille.impl.DediconTranslator$Provider
+              nl.dedicon.pipeline.braille.impl.DediconTranslator$Provider,
+              nl.dedicon.pipeline.braille.impl.TablePath
             </_dsannotations>
           </instructions>
         </configuration>
