Much improved output, including: - Better rendering of headings. - Better rendering of lists. - Less page breaking. - Poems, linegroups and lines. - Notes. - Compatibility with latest pipeline-mod-braille snapshot.
Fixes #31, #32.

--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,11 @@
       <groupId>org.daisy.pipeline.modules.braille</groupId>
       <artifactId>dtbook-to-pef</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.osgi</groupId>
+      <artifactId>org.osgi.compendium</artifactId>
+      <scope>provided</scope>
+    </dependency>
     <!--
         runtime dependencies
     -->
