--- a/pom.xml
+++ b/pom.xml
@@ -6,10 +6,7 @@
   <parent>
     <groupId>org.daisy.pipeline.modules.braille</groupId>
     <artifactId>braille-modules-parent</artifactId>
-    <!--
-        depends on master
-    -->
-    <version>1.9.11-SNAPSHOT</version>
+    <version>1.9.11</version>
     <relativePath />
   </parent>
 
