--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
   </parent>
 
   <artifactId>mod-dedicon</artifactId>
-  <version>1.5.1-SNAPSHOT</version>
+  <version>1.5.1</version>
   <packaging>bundle</packaging>
 
   <name>DP2 Braille Modules :: mod-dedicon</name>
@@ -195,4 +195,8 @@
       </plugin>
     </plugins>
   </build>
+
+  <scm>
+    <tag>v1.5.1</tag>
+  </scm>
 </project>
