--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
   </parent>
 
   <artifactId>mod-dedicon</artifactId>
-  <version>1.6.1</version>
+  <version>1.6.2-SNAPSHOT</version>
   <packaging>bundle</packaging>
 
   <name>DP2 Braille Modules :: mod-dedicon</name>
@@ -201,8 +201,4 @@
       </plugin>
     </plugins>
   </build>
-
-  <scm>
-    <tag>v1.6.1</tag>
-  </scm>
 </project>
